# mm-asset-rag

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
docs/: api.md  architecture.md  asset-store-design.md  configuration.md  eval-report-v10.md  eval-report-v2.md  eval-report-v3.md  eval-report-v4.md  eval-report-v5.md  eval-report-v6.md  eval-report-v9.md  eval-report.md  multimodal-eval-report.md  quickstart.md  upload-flow.md
examples/: README.md  api_client.py
examples/data/: README.md
mm_asset_rag/: __init__.py  answer.py  api.py  asset_index.py  assets.py  auto_meta.py  bm25_zh.py  cli.py  config.py  contextual.py  document_store.py  evaluation.py  evaluation_v2.py  image_caption.py  image_parser.py  metrics.py  paths.py  pdf_parser.py  protocols.py  providers.py  qdrant_store.py  query_preprocess.py  registry.py  retrieval.py  schema.py  service.py  settings.py  sniff.py  text_index.py  text_keywords.py  upload_pipeline.py
mm_asset_rag/backends/: __init__.py  qdrant_backend.py
mm_asset_rag/embedders/: __init__.py  image_embedder.py  reranker.py  text_embedder.py
mm_asset_rag/parsers/: __init__.py  chunk_splitter.py  docling_parser.py  document_ir.py  image_parser.py  markitdown_parser.py  pdf_images.py  pdf_parser.py
mm_asset_rag/web/: index.html
scripts/: benchmark.py  build_manifest.py  clean_asset_index_ghosts.py  contextual_pilot.sh  diagnose_eval_misses.py  eval_extended.py  eval_multimodal.py  eval_rag.py  expand_corpus.py  import_caltech101.py  import_vlm_captions.py  prune_corpus.py  refresh_asset_titles.py  unlock_and_eval.sh
tests/: conftest.py
tests/fixtures/: sample_manifest.json
tests/unit/: test_answer.py  test_answer_images.py  test_api.py  test_asset_index.py  test_assets.py  test_auto_meta.py  test_bge_m3_ollama_provider.py  test_bm25_zh.py  test_channel_limit.py  test_chunk_splitter.py  test_cli.py  test_cli_reindex.py  test_contextual.py  test_docling_parser.py  test_document_ir.py  test_document_store.py  test_documents_jsonl_lock.py  test_evaluation.py  test_evaluation_v2.py  test_evaluation_v2_regression.py  test_image_caption.py  test_image_embedder.py  test_markitdown_parser.py  test_metrics.py  test_packaging.py  test_parsers.py  test_paths.py  test_pdf_images.py  test_providers_embedding.py  test_qdrant_backend.py  test_qdrant_lock.py  test_qdrant_schema_check.py  test_query_preprocess.py  test_registry.py  test_reranker.py  test_retrieval.py  test_schema.py  test_sentence_transformer_embedder.py  test_service.py  test_settings.py  (+3 more)
