[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mm-asset-rag"
dynamic = ["version"]
description = "Multimodal retrieval engine: index mixed assets (PDFs / Office docs / images), search across four routes (text→text, text→image, image→image, hybrid) fused with RRF, with an optional grounded LLM answer layer on top."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "liguoyu", email = "guoyu.li@lcfuturecenter.com" },
]
keywords = ["multimodal-retrieval", "cross-modal", "vector-search", "rag", "qdrant", "clip", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pillow>=10.0,<13.0",
    "requests>=2.31,<3.0",
    "PyMuPDF>=1.23,<2.0",
    "qdrant-client>=1.7,<2.0",
    "fastembed>=0.5,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "jieba>=0.42,<1.0",
    # Office/text document parsing (docx/pptx/xlsx/html/md). MarkItDown is
    # the default document backend (pure Python, no ML stack); the format
    # converters ride along via the [docx,pptx,xlsx] extras so a bare
    # install parses Office docs out of the box. docling remains available
    # as the optional heavy backend via the [docling] extra.
    "markitdown[docx,pptx,xlsx]>=0.1.6,<1.0",
]

[project.optional-dependencies]
clip = ["sentence-transformers>=2.2,<6.0"]
docling = ["docling>=2.0,<3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=4.0",
    # tests/unit/test_sentence_transformer_embedder.py 直接 `import numpy as np`;
    # 显式声明,避免靠 fastembed 传递间接可用。
    "numpy>=1.26,<3.0",
]

[project.scripts]
mmrag     = "mm_asset_rag.cli:main"
mmrag-api = "mm_asset_rag.api:run"

[project.urls]
Homepage   = "https://github.com/lgy1027/mm-asset-rag"
Repository = "https://github.com/lgy1027/mm-asset-rag"
Issues     = "https://github.com/lgy1027/mm-asset-rag/issues"

[tool.hatch.version]
path = "mm_asset_rag/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mm_asset_rag"]
exclude  = ["tests", "examples", "docs", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: starts local Qdrant or external network",
]